shopping-list/shopping-list-template.yml
kind: DeploymentConfig
apiVersion: v1
metadata:
  name: shopping-list-deployment
  annotations:
    version: 0.0.1-SNAPSHOT
spec:
  replicas: 1
  template:
    metadata:
      labels:
        name: shopping-list
        component: shopping-list
        app: shopping-list
    spec:
      containers:
        - name: shopping-list
          image: michielabekbc/shopping-list:0.0.1-SNAPSHOT
          ports:
            - containerPort: 8080
            - containerPort: 8443
          lifecycle:
            preStop:
              exec:
                # SIGTERM triggers a quick exit; gracefully terminate instead
                command: ["kill", "-SIGINT", "`pidof java`"]
          livenessProbe:
            tcpSocket:
              port: 8080
            initialDelaySeconds: 20
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 3
---
kind: Service
apiVersion: v1
metadata:
  name: shopping-list-service
spec:
  selector:
    app: shopping-list
  ports:
    - name: httpport
      protocol: TCP
      port: 80
      targetPort: 8080
    - name: httpsport
      protocol: TCP
      port: 443
      targetPort: 8443
  type: LoadBalancer
---
kind: Route
apiVersion: v1
metadata:
  name: shopping-list-route
spec:
  port:
    targetPort: 8080
  to:
    kind: Service
    name: shopping-list-service
